<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tc2r.greedisland.FrontFragment"
    android:id="@+id/layout_main">


    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/status_card"
            style="?backgroundPri"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="130dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:contentPadding="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView

                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/default_Content_Description"
                    android:src="@drawable/leetahead"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="10dp"
                        android:text="@string/Main_Welcome_Message"
                        android:textAppearance="@android:style/TextAppearance.Medium"/>

                    <TextView
                        android:id="@+id/statusHuntName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Main_Hunter_Title"
                        android:textAppearance="@android:style/TextAppearance.Small"/>

                    <TextView
                        android:id="@+id/statusLangName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="2"
                        android:text="@string/Main_Hunter_Lang"
                        android:textAppearance="@android:style/TextAppearance.Small"/>

                    <TextView
                        android:id="@+id/statusIdNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Main_Hunter_Num"
                        android:textAppearance="@android:style/TextAppearance.Small"/>

                    <TextView
                        android:id="@+id/statusBaseTown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Main_Hunter_Base"
                        android:textAppearance="@android:style/TextAppearance.Small"/>

                    <TextView
                        android:id="@+id/statusLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Main_Hunter_Location"
                        android:textAppearance="@android:style/TextAppearance.Small"/>
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/lay_options"
            style="?backgroundPri"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_below="@id/status_card"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:contentPadding="6dp">

            <FrameLayout
                style="?backgroundSec"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1">


                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="top"
                            android:layout_marginEnd="2dp"
                            android:layout_weight="2"
                            app:cardBackgroundColor="@android:color/transparent"
                            app:cardCornerRadius="2dp"
                            app:cardElevation="2dp">

                            <RelativeLayout

                                android:id="@+id/button_map"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/logo_red_long">

                                <TextView
                                    android:id="@+id/tv_map"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:alpha=".8"
                                    android:drawableStart="@drawable/ic_action_compass_white"
                                    android:drawablePadding="10dp"
                                    android:gravity="start|top"
                                    android:text="@string/Main_Greedisland_Title"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textColor="@android:color/white"/>
                            </RelativeLayout>
                        </android.support.v7.widget.CardView>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#80741507">

                            <ImageView
                                android:id="@+id/image_map"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/default_Content_Description"
                                android:src="@drawable/logo_red"/>
                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1">

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="top"
                            android:layout_marginEnd="2dp"
                            android:layout_weight="2"
                            app:cardBackgroundColor="@android:color/transparent"
                            app:cardCornerRadius="2dp"
                            app:cardElevation="2dp">

                            <RelativeLayout

                                android:id="@+id/button_book"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/logo_blue_long">

                                <TextView
                                    android:id="@+id/tv_book"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:alpha=".8"
                                    android:drawableStart="@drawable/ic_action_book"
                                    android:drawablePadding="10dp"
                                    android:gravity="start|top"
                                    android:text="@string/Main_Book_Title"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textColor="@android:color/white"/>
                            </RelativeLayout>

                        </android.support.v7.widget.CardView>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#80113884">

                            <ImageView
                                android:id="@+id/image_book"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/default_Content_Description"
                                android:src="@drawable/logo_blue"/>
                        </RelativeLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/lay_settings"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1">

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="2dp"
                            android:layout_weight="2"
                            app:cardBackgroundColor="@android:color/transparent"
                            app:cardCornerRadius="1dp"
                            app:cardElevation="1dp">

                            <RelativeLayout
                                android:id="@+id/button_settings"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/logo_green_long">

                                <TextView
                                    android:id="@+id/tv_settings"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:alpha=".8"
                                    android:drawableStart="@drawable/ic_settings_white_24dp"
                                    android:drawablePadding="10dp"
                                    android:gravity="start|top"
                                    android:text="@string/Main_Settings_Title"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textColor="@android:color/white"/>
                            </RelativeLayout>

                        </android.support.v7.widget.CardView>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#8006450e">

                            <ImageView
                                android:id="@+id/image_settings"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/default_Content_Description"
                                android:src="@drawable/logo_green"/>

                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>