<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context="com.tc2r.greedisland.map.Start">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="3dp"
                android:layout_weight="2"
                android:baselineAligned="false"
                android:orientation="horizontal"
                >


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="4"
                    android:background="@android:color/transparent">

                    <android.support.v7.widget.CardView
                        style="?backgroundSec"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="6dp"
                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/reward_Cards_Header"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:textStyle="bold"/>


                            <ImageView
                                android:id="@+id/dailyCard_1"
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="5dp"
                                android:clickable="true"
                                android:contentDescription="@string/default_Content_Description"
                                android:src="@drawable/empty_slot_small"
                                android:visibility="gone"

                                />

                            <ImageView
                                android:id="@+id/dailyCard_2"
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="5dp"
                                android:clickable="true"
                                android:contentDescription="@string/default_Content_Description"
                                android:src="@drawable/empty_slot_small"
                                android:visibility="gone"
                                />

                            <ImageView
                                android:id="@+id/dailyCard_3"
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="5dp"
                                android:clickable="true"
                                android:contentDescription="@string/default_Content_Description"
                                android:src="@drawable/empty_slot_small"
                                android:visibility="gone"
                                />


                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        style="?backgroundPri"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="6dp"
                        >

                        <RelativeLayout
                            android:id="@+id/lay_book"
                            style="?backgroundSec"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:clickable="true"

                            >

                            <ImageView
                                android:id="@+id/iv_book"
                                android:layout_width="match_parent"
                                android:layout_height="300dp"
                                android:contentDescription="@string/default_Content_Description"
                                android:scaleType="centerInside"
                                android:src="@drawable/card_deck"
                                />


                            <TextView
                                android:id="@+id/tv_bookText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/book_Header"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:textStyle="bold"
                                />
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>


                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.CardView
                style="?backgroundPri"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:contentPadding="4dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rules_view"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="horizontal">


                </android.support.v7.widget.RecyclerView>

            </android.support.v7.widget.CardView>


        </LinearLayout>

</android.support.v4.widget.NestedScrollView>
